Stop jump between mobile menu bars and close icon

--- a/style.unmin.css
+++ b/style.unmin.css
@@ -390,6 +390,9 @@ input[type="file"] {
 	font-family: FontAwesome;
 	line-height: 1em;
 	speak: none;
+	width: 1.28571429em;
+	text-align: center;
+	display: inline-block;
 }
 .toggled .menu-toggle:before {
 	content: "\f00d";
